--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,46 +1,46 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.5)
 
-PROJECT(MCCOutlet)
+project(MCCOutlet
+	LANGUAGES CXX
+	VERSION 0.1)
 
-# General settings
-LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
-cmake_policy(SET CMP0042 NEW) # ENABLE CMP0042: MACOSX_RPATH is enabled by default.
-IF(UNIX)
-    # c++11 for nullptr and others
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-ENDIF()
+# set up LSL if not done already
+if(NOT TARGET LSL::lsl)
+	# when building out of tree LSL_ROOT needs to be specified on the cmd line
+	file(TO_CMAKE_PATH "${LSL_INSTALL_ROOT}" LSL_INSTALL_ROOT)
+	list(APPEND LSL_INSTALL_ROOT "${CMAKE_CURRENT_LIST_DIR}/../../LSL/liblsl/build/install")
+	list(APPEND LSL_INSTALL_ROOT "${CMAKE_CURRENT_LIST_DIR}/../../build/install")
+	find_package(LSL HINTS ${LSL_INSTALL_ROOT}/share/LSL/ ${LSL_INSTALL_ROOT}/LSL/share/LSL QUIET)
+	if(NOT LSL_FOUND)
+		message(FATAL_ERROR "Precompiled LSL was not found. See https://github.com/labstreaminglayer/labstreaminglayer/blob/master/doc/BUILD.md#lsl_install_root for more information.")
+	endif()
+	list(APPEND CMAKE_MODULE_PATH ${LSL_DIR})
+	message(STATUS "Looking for LSLCMake in ${LSL_DIR}")
+	include(LSLCMake)
+endif()
 
+# mccdaq
 add_subdirectory(MCCDaq-libusb-driver)
 
-# Third party packages
-SET(REQUIRED_LIBS)
-# LSL
-set(LSL_ROOT_DIR ${CMAKE_CURRENT_LIST_DIR}/../../../labstreaminglayer/LSL/liblsl)
-find_package(LSL REQUIRED)
-LIST(APPEND REQUIRED_LIBS ${LSL_LIBRARIES})
-
 # Target executable
-add_executable(${PROJECT_NAME}
-    ${CMAKE_CURRENT_SOURCE_DIR}/MCCOutlet.cpp
+add_executable(${PROJECT_NAME} MACOSX_BUNDLE WIN32
+    MCCOutlet.cpp
 )
 
 target_include_directories(${PROJECT_NAME} PRIVATE
     mccdaq
-    ${LSL_INCLUDE_DIRS}
 )
 
 target_link_libraries(${PROJECT_NAME}
     mccdaq
-    ${REQUIRED_LIBS}
+    LSL::lsl
 )
 
-IF(WIN32)
-    add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy_if_different
-            ${LSL_BINARY_RELEASE}
-            $<TARGET_FILE_DIR:${PROJECT_NAME}>)
-    add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy_if_different
-            ${LSL_BINARY_DEBUG}
-            $<TARGET_FILE_DIR:${PROJECT_NAME}>)
-ENDIF()
+set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 14)
+# target_compile_features(${PROJECT_NAME} PRIVATE cxx_auto_type cxx_lambda_init_captures)
+
+installLSLApp(${PROJECT_NAME})
+installLSLAuxFiles(${PROJECT_NAME}
+	${PROJECT_NAME}.cfg
+)
+LSLGenerateCPackConfig()
